# 142bot

./: .gitignore  142bot.config.in  CMakeLists.txt  Makefile.am  README.md  config.example.json  configure.ac
cmake/: Findcpr.cmake  Findcurl.cmake  Finddpp.cmake  Findldap.cmake  Findsentry.cmake  Findspdlog.cmake
include/142bot/: bot.hpp  db.hpp  modules.hpp  util.hpp
migrations/: 0001-init.sql  0002-state.sql  0003-unique-state-key.sql
modules/: Makefile.am
modules/bugzilla/: bugzilla.cpp
modules/ldap/: ldap.cpp
modules/mail/: mail.cpp
modules/mmanager/: mmanager.cpp
modules/reactions/: reactions.cpp
modules/spotify/: spotify.cpp
modules/stoplight/: main.cpp
resources/: reactions.json
src/: 142bot_config.h.in  CMakeLists.txt  bot.cpp  db.cpp  main.cpp  meta.cpp  modules.cpp  util.cpp
