pkglib_LTLIBRARIES = module_mmanager.la module_spotify.la module_reactions.la module_mail.la module_stoplight.la

module_mmanager_la_SOURCES = mmanager/mmanager.cpp
module_mmanager_la_LDFLAGS = -avoid-version -shared -export-dynamic -module
module_mmanager_la_CXXFLAGS = -I ../include


module_spotify_la_SOURCES = spotify/spotify.cpp
module_spotify_la_LDFLAGS = -avoid-version -shared -export-dynamic -module
module_spotify_la_CXXFLAGS = -I ../include


module_reactions_la_SOURCES = reactions/reactions.cpp
module_reactions_la_LDFLAGS = -avoid-version -shared -export-dynamic -module
module_reactions_la_CXXFLAGS = -I ../include

module_mail_la_SOURCES = mail/mail.cpp
module_mail_la_LDFLAGS = -avoid-version -shared -export-dynamic -module
module_mail_la_CXXFLAGS = -I ../include

module_stoplight_la_SOURCES = stoplight/stoplight.cpp
module_stoplight_la_LDFLAGS = -avoid-version -shared -export-dynamic -module
module_stoplight_la_CXXFLAGS = -I ../include
